overflow issues

--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -1,8 +1,8 @@
 body {
   font-family: monospace;
 	scroll-behavior: smooth;
-  overflow-x: hidden;
   overflow-y: scroll;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: min-content 1fr;
   margin: 0;
@@ -24,7 +24,9 @@ nav {
   white-space: nowrap;
   margin: 0;
   padding: 0;
+  max-width: 100vw;
   pointer-events: none;
+  overflow-x: hidden;
 
   ul {
     list-style: none;
@@ -53,7 +55,7 @@ nav {
           margin: 0;
           transform-style: flat;
           transition-delay: 0s;
-          transition-duration: 0.8s;
+          transition-duration: 0.5s;
           transition-property: all;
           transition-timing-function: ease-in-out;
           @include responsive-font(3.8vw, $regular, $extra-large, $large);
